--- a/app/assets/new-Dashboard-add.html
+++ b/app/assets/new-Dashboard-add.html
@@ -207,7 +207,22 @@
                     <div class="chart-container-right-top" id="chart-container-right-top"></div>
                     <div class="chart-container-right-bottom" id="chart-container-right-bottom"></div>
                 </div>
-                <div class="chart-container-bottom" id="chart-container-bottom"></div>
+                <div class="chart-container-bottom" id="chart-container-bottom">
+                    <table>
+                        <tr>
+                            <td>21</td>
+                            <td>109</td>
+                            <td>$34</td>
+                            <td>$190</td>
+                        </tr>
+                        <tr>
+                            <td>Out of Target</td>
+                            <td>Total Amount</td>
+                            <td>Average Value</td>
+                            <td>Total Value</td>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
 
