--- a/app/assets/new-Dashboard-add.html
+++ b/app/assets/new-Dashboard-add.html
@@ -141,7 +141,7 @@
                         <select data-placeholder="Kpi *" style="width:150px;" class="chosen-select" title="analy-kpi-select"
                                 id="chart-kpi" date-pick=false>
                             <option value=""> </option>
-                            <option value="kpi1" interval="200" type="">week</option>
+                            <option value="kpi1" interval="200">week</option>
                             <option value="kpi1" interval="90">hour</option>
                             <option value="kpi1" interval="100">day</option>
                             <option value="kpi2" interval="400">quarter</option>
@@ -194,19 +194,32 @@
                     <div class="chart-container-top" id="chart-container-top">
                         <table>
                             <tr>
-                                <td></td>
+                                <td>$1000</td>
                                 <td>Max</td>
                             </tr>
                             <tr>
-                                <td></td>
+                                <td>$10</td>
                                 <td>Min</td>
                             </tr>
                         </table>
                     </div>
                     <div class="db-chart-container" id="chart-container"></div>
                     <div id="chart-container-right" class="chart-container-right">
-                        <div class="chart-container-right-top" id="chart-container-right-top"></div>
-                        <div class="chart-container-right-bottom" id="chart-container-right-bottom"></div>
+                        <p>12%</p>
+                        <p>monthly sales</p>
+                        <table>
+                            <tr>
+                                <td>$123</td>
+                                <td>Selected</td>
+                            </tr>
+                            <tr>
+                                <td>$1234</td>
+                                <td>Total</td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div id="chart-container-right-scatter" class="chart-container-right">
+
                     </div>
                     <div class="chart-container-bottom" id="chart-container-bottom">
                         <table>
