--- a/app/assets/new-Dashboard.html
+++ b/app/assets/new-Dashboard.html
@@ -87,6 +87,15 @@
                     <input type='text' />
                 </div>
             </div>
+
+            <div class="dashboard-content" >
+                <div class="gridster" >
+                    <ul class="dashBoard-show" id="dashBoard-show">
+
+                    </ul>
+                </div>
+            </div>
+
         </div>
 
         <aside class="content-right-nav" name='dashboard' id="content-right-nav">
@@ -126,7 +135,9 @@
                     bring it back</p>
                 <a class="btn btn-primary">Full Now</a>
             </section>
+
         </aside>
+
 
     </div>
 
