--- a/app/assets/new-Dashboard.html
+++ b/app/assets/new-Dashboard.html
@@ -76,7 +76,7 @@
         </ul>
     </header>
 
-    <div style="display:table;width:100%;table-layout:fixed;height:100%;margin-top:-71px;">
+    <div style="display:table;width:100%;table-layout:fixed;height:100%;margin-top:-71px;position:absolute">
         <div class="content-left-main" name="dashboard" id="content-left-main">
             <div style="width:auto;height:71px;"></div>
             <div class="left-content-title" id="left-content-title">
@@ -88,7 +88,7 @@
                 </div>
             </div>
 
-            <div class="dashboard-content" >
+            <div class="dashboard-content">
                 <div class="gridster" >
                     <ul class="dashBoard-show" id="dashBoard-show">
 
