--- a/app/assets/new-Dashboard-add.html
+++ b/app/assets/new-Dashboard-add.html
@@ -91,7 +91,7 @@
             <section class="solid dashboard-add-name">
                 <h3>Add DashBoard Name</h3>
                 <p>Give the dashboard being created a proper name</p>
-                <input type='text' placeholder="Dashboard name"/>
+                <input type='text' placeholder="Dashboard name" id="dashboard-name-input"/>
             </section>
             <section class="solid dashboard-add-type">
                 <h3>Choose A Type</h3>
@@ -113,7 +113,7 @@
             <section class="solid">
                 <h3>Select DashBoard Group</h3>
                 <p>Select a dashboard group to put your dashboard</p>
-                <select data-placehoder="Group" style="width:120px;" class="chosen-select">
+                <select data-placehoder="Group" style="width:120px;" class="chosen-select" id="dashboard-group-name">
                     <option ></option>
                     <option value="group1">entity1</option>
                     <option value="group2">entity2</option>
@@ -123,7 +123,7 @@
             <section class="solid">
                 <h3>Finish</h3>
                 <p>Publish your dashboard since you have done</p>
-                <a class="btn btn-primary">Publish Now</a>
+                <a class="btn btn-primary" id="add-dashboard">Publish Now</a>
             </section>
         </aside>
 
