--- a/app/assets/new-Dashboard-add.html
+++ b/app/assets/new-Dashboard-add.html
@@ -193,16 +193,16 @@
                     </ul>
                 </div>
 
-                <div class="put-db-chart" name="dashboard-add">
+                <div class="put-db-chart" name="dashboard-add" id="put-db-chart">
                     <div class="chart-container-top" id="chart-container-top">
                         <table>
                             <tr>
-                                <td>$1000</td>
-                                <td>Max</td>
+                                <td></td>
+                                <td></td>
                             </tr>
                             <tr>
-                                <td>$10</td>
-                                <td>Min</td>
+                                <td>Max value</td>
+                                <td>Min value</td>
                             </tr>
                         </table>
                     </div>
@@ -221,20 +221,20 @@
                             </tr>
                         </table>
                     </div>
-                    <div id="chart-container-right-scatter" class="chart-container-right">
+                    <div id="chart-container-right-scatter" class="chart-container-right chart-container-right-scatter">
 
                     </div>
                     <div class="chart-container-bottom" id="chart-container-bottom">
                         <table>
                             <tr>
-                                <td>21</td>
-                                <td>109</td>
-                                <td>$34</td>
-                                <td>$190</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
                             </tr>
                             <tr>
                                 <td>Out of Target</td>
-                                <td>Total Amount</td>
+                                <td>Total Record</td>
                                 <td>Average Value</td>
                                 <td>Total Value</td>
                             </tr>
