--- a/app/assets/new-Manage-kpi.html
+++ b/app/assets/new-Manage-kpi.html
@@ -20,48 +20,56 @@
 
 </aside>
 <article class="wrap-main" id="wrap-main">
-    <header>
-        <div class="user-portrait-background pull-left" state="close" id="user-portrait-background">
-            <div class="user-portrait-brand"></div>
-            <!--<div class="user-portrait-name">IF-EPM</div>-->
-        </div>
-        <nav class="pull-left">
-            <ul>
-                <li><a>
-                    <span>Get Started</span>
-                    <span class="nav-get-started"></span>
-                </a></li>
-                <li><a>
-                    <span>DashBoard</span>
-                    <span class="nav-dash-board"></span>
-                </a></li>
-                <li><a href="new-Analytics.html">
-                    <span>Analytics</span>
-                    <span class="nav-analytics"></span>
-                </a></li>
-                <li><a>
-                    <span>Reports</span>
-                    <span class='nav-report'></span>
-                </a></li>
-                <li class="relative">
-                    <a>
-                        <span>Manage</span>
-                        <span class='nav-manage'></span>
-                    </a>
-                    <ul class="nav-manage-sub">
-                        <li><a>KPIs</a></li>
-                        <li><a>Users</a></li>
-                        <li><a>Views</a></li>
-                        <li><a>Billings</a></li>
-                    </ul>
-                </li>
-                <li><a>
-                    <span>Entry KPIs</span>
-                    <span class="nav-entry-kpi"></span>
-                </a></li>
-            </ul>
-        </nav>
-    </header>
+<header>
+    <div class="user-portrait-background pull-left" state="close" id="user-portrait-background">
+        <div class="user-portrait-brand"></div>
+        <!--<div class="user-portrait-name">IF-EPM</div>-->
+    </div>
+    <nav class="pull-left">
+        <ul>
+            <li><a>
+                <span>Get Started</span>
+            </a></li>
+            <li class="relative">
+                <a>
+                    <span>Manage</span>
+                </a>
+                <ul class="nav-manage-sub">
+                    <li><a>KPIs</a></li>
+                    <li><a>Users</a></li>
+                    <li><a>Views</a></li>
+                    <li><a>Billings</a></li>
+                </ul>
+            </li>
+            <li class="active"><a>
+                <span>DashBoard</span>
+            </a></li>
+            <li><a href="new-Analytics.html">
+                <span>Analytics</span>
+            </a></li>
+            <li><a>
+                <span>Reports</span>
+            </a></li>
+            <li><a>
+                <span>&nbsp;</span>
+            </a></li>
+            <li><a>
+                <span>Entry KPIs</span>
+            </a></li>
+        </ul>
+    </nav>
+    <ul class="nav-user-part">
+        <li>
+            <i class="icon-user"></i>
+        </li>
+        <li class='empty'>
+            <span>&nbsp;</span>
+        </li>
+        <li>
+            <a>Log Out</a>
+        </li>
+    </ul>
+</header>
 
 
 
@@ -72,8 +80,7 @@
 
 
 
-
-
+<div style="display:table;width:100%;table-layout:fixed;height:100%;margin-top:-111px;">
     <ul class="manage-left-menu" id="manage-left-menu" type="category">
        <li>Manage KPI</li>
        <li id="manage-menu-add">
@@ -94,11 +101,6 @@
            <a>Category3</a>
        </li>
     </ul>
-
-
-
-
-
 
     <div class="manage-kpi-add" id="manage-kpi-add">
        <i class="icon-remove" id="close-add-kpi"></i>
